# ToolTip_Companion_Browser

./: .gitignore  BUILD_PLAN.md  BUILD_STATUS.md  Building NaviGrab C++ Files for ToolTip Companion Browser.md  CHAT_SESSION_NOTES.md  CHROMIUM_BUILD_ISSUE_ANALYSIS.md  CHROMIUM_BUILD_NOTES.md  Chromium API Changes Report for ToolTip_Browser.md  Client-Side Local Storage and Crawling in a C++ Chromium Fork_ Server-Independent Feasibility (1).md  DEVELOPMENT_ROADMAP.md  FINAL_STATUS_UPDATE.md  GITHUB_ISSUE_TEMPLATE.md  Halp_ToolTip_Companion_Browser.md  NAVIGRAB_REQUIREMENTS.md  NAVIGRAB_SUCCESS_SUMMARY.md  PROJECT_README.md  README.md  auth.py  autoninja.py  build_chrome.bat  cipd_manifest.txt  cipd_manifest.versions  gerrit_util.py  git_auth.py  git_cl.py  ninja.py  ninjalog_uploader.py  presubmit_canned_checks.py  presubmit_support.py  scm.py  siso.py  test_navigrab_compilation.cpp  test_navigrab_simple.cpp  working_demo.cpp
Building C++ Library for Screenshot Tooltip in Chromium/: C++ Library Design for ToolTip Companion Browser.md  Chromium C++ Integration Research Summary.md  ToolTip Companion Browser_ C++ Library Integration Guide.md  element_detector.cc  element_detector.h  local_storage_manager.cc  local_storage_manager.h  screenshot_capture.cc  screenshot_capture.h  tooltip_manager_service.cc  tooltip_manager_service.h  tooltip_ui_controller.cc  tooltip_ui_controller.h
Windows Protoc Wrapper and Chromium Build Workarounds/: 2. Chromium Build System Workarounds.md  Chromium Build Issues_  Crashes and Non-Zero Status.md  Chromium GN Build Configuration.md  Chromium Perfetto Protobuf Generation Issues.md  Known Chromium Build Issues and Workarounds for  and Perfetto.md  Windows Batch File Encoding Issues and Null Bytes.md  Workaround for Chromium Builds on Windows.md  chromium_individual_components_build.md  protoc_ts_proto_solution.md
chrome_extension/: background.js  manifest.json  options.html  options.js
docs/: Bug_Bounty_Report_Threading_Restrictions_and_UI_Issues.md  COMPLETE_Project_Goals_and_Vision.md  Crash_Fix_Success_Report.md  PM Response_ Client-Side Tooltip Display and Playwright MCP Integration.md  PM_Report_Spider_Button_Development.md  PM_Response_Implementation_Status.md  Project_Overview.md  README.md  SUCCESS_Report_Native_Tooltip_Implementation.md  SUCCESS_Report_Screenshot_Display_Working.md  Screenshot_Capture_Issue_Analysis.md
infra/config/: recipes.cfg
metadata/: dependency_metadata.py
metadata/fields/custom/: license_allowlist.py  update_mechanism.py
metadata/tests/: dependency_metadata_test.py  fields_test.py  validate_test.py
recipes/: README.recipes.md
recipes/recipe_modules/bot_update/: __init__.py
recipes/recipe_modules/depot_tools/: __init__.py
recipes/recipe_modules/gclient/: __init__.py
recipes/recipe_modules/gerrit/: __init__.py
recipes/recipe_modules/git/: __init__.py
recipes/recipe_modules/git_cl/: __init__.py
recipes/recipe_modules/gitiles/: __init__.py
recipes/recipe_modules/gsutil/: __init__.py
recipes/recipe_modules/osx_sdk/: __init__.py
recipes/recipe_modules/presubmit/: __init__.py
recipes/recipe_modules/tryserver/: __init__.py
recipes/recipe_modules/windows_sdk/: __init__.py
src/: .gclient_entries  .gcs_entries
src/.cipd/: tagcache.db
src/.cipd/pkgs/0/: _current.txt
src/.cipd/pkgs/0/dDJsH3Z7ukju53Zdd2pv00xR-PlXUXU5k9Fqx-di1_8C/.cipdpkg/: manifest.json
src/.cipd/pkgs/1/: _current.txt
src/.cipd/pkgs/1/Au_jpz74PDLco2hQoXY8bJXjixrS0oo8_fG_Q3m9ProC/.cipdpkg/: manifest.json
src/.cipd/pkgs/11/: _current.txt
src/.cipd/pkgs/13/: _current.txt
src/.cipd/pkgs/14/: _current.txt
src/.cipd/pkgs/16/: _current.txt
src/.cipd/pkgs/18/: _current.txt
src/.cipd/pkgs/2/: _current.txt
src/.cipd/pkgs/21/: _current.txt
src/.cipd/pkgs/22/: _current.txt
src/.cipd/pkgs/23/: _current.txt
src/.cipd/pkgs/25/: _current.txt
src/.cipd/pkgs/26/: _current.txt
src/.cipd/pkgs/29/: _current.txt
src/.cipd/pkgs/30/: _current.txt
src/.cipd/pkgs/32/: _current.txt
src/.cipd/pkgs/33/: _current.txt
src/.cipd/pkgs/8/: _current.txt
src/chrome/browser/tooltip/: ai_integration.cc  ai_integration.h  dark_mode_manager.h  element_detector.h  navigrab_integration.cc  navigrab_integration.h  tooltip_service.cc  tooltip_test_integration.cc
src/chrome/browser/ui/views/tooltip/: BUILD.gn  tooltip_toolbar_integration.cc  tooltip_toolbar_integration.h  tooltip_view.h
standalone_tooltip_lib/: CMakeLists.txt  README.md  build.bat
standalone_tooltip_lib/examples/: basic_usage.cpp
standalone_tooltip_lib/include/: navigrab_tooltip.h
standalone_tooltip_lib/src/: BUILD.gn  navigrab_core.cpp  navigrab_core.h  proactive_scraper.cpp  proactive_scraper.h
standalone_tooltip_lib/src/browser/tooltip/: BUILD.gn  dark_mode_manager.cc  navigrab_integration.cc  navigrab_integration.h  screenshot_capture.cc  tooltip_prefs.cc  tooltip_prefs.h  tooltip_service.cc  tooltip_service.h  tooltip_test_integration.h
standalone_tooltip_lib/src/browser/ui/views/tooltip/: fresh_crawl_button.cc  fresh_crawl_button.h  tooltip_toolbar_integration.cc  tooltip_toolbar_integration.h
tests/: gerrit_util_test.py  git_cl_test.py  presubmit_unittest.py
tools/build_monitor/: build_server.ps1  start_build.ps1
tools/protoc_wrapper/: protoc-gen-ts_proto.bat  protoc-gen-ts_proto.py
tooltip_components/chrome/browser/tooltip/: element_detector.cc  screenshot_capture.h  tooltip_browser_integration.cc  tooltip_browser_integration.h  tooltip_service.h
(+21 files in other folders)
